picture as home

--- a/RoomBooker/src/app/navbar/navbar.component.html
+++ b/RoomBooker/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <a routerLink="" routerLinkActive="active">Home</a>
+
+    <img routerLink="" routerLinkActive="active" src="https://pbs.twimg.com/profile_images/588342133125468160/0esgVCxq_400x400.jpg" alt="" height="64px">
     <span class="example-spacer"></span>
     <button style="align:right" [matMenuTriggerFor]="menu">Menu</button>
     <mat-menu #menu="matMenu">
