--- a/RoomBooker/src/app/login/login.component.css
+++ b/RoomBooker/src/app/login/login.component.css
@@ -9,7 +9,7 @@
   position: relative;
   z-index: 1;
   background: #FFFFFF;
-  max-width: 360px;
+  max-width: 460px;
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
@@ -44,11 +44,13 @@
   background: #3f51b5;
 }
 .form .message {
+  font-family: "Roboto", sans-serif;
   margin: 15px 0 0;
   color: #b3b3b3;
   font-size: 12px;
 }
 .form .message a {
+  font-family: "Roboto", sans-serif;
   color: #3f51b5;
   text-decoration: none;
 }
