--- a/RoomBooker/src/app/login/login.component.html
+++ b/RoomBooker/src/app/login/login.component.html
@@ -1,17 +1,10 @@
 <div class="login-page">
   <div class="form">
-    <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
-      <button>create</button>
-      <p class="message">Already registered? <a href="#">Sign In</a></p>
-    </form>
     <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
+      <input type="text" placeholder="Username"/>
+      <input type="password" placeholder="Password"/>
       <button>login</button>
-      <p class="message">Not registered? <a href="#">Create an account</a></p>
+      <p class="message">Not registered? <a routerLink="../register" >Create an account</a></p>
     </form>
   </div>
 </div>
