--- a/RoomBooker/src/app/navbar/navbar.component.html
+++ b/RoomBooker/src/app/navbar/navbar.component.html
@@ -1,13 +1,10 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
 
-    <img routerLink="" routerLinkActive="active" src="https://pbs.twimg.com/profile_images/588342133125468160/0esgVCxq_400x400.jpg" alt="" height="64px">
+    <img routerLink="" routerLinkActive="active" src="https://pbs.twimg.com/profile_images/588342133125468160/0esgVCxq_400x400.jpg" alt="" height="48 px">
     <span class="example-spacer"></span>
-    <button style="align:right" [matMenuTriggerFor]="menu">Menu</button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>Item 1</button>
-      <button mat-menu-item>Item 2</button>
-    </mat-menu>
+    <button mat-button routerLink="login" routerLinkActive="active" >Login</button>
+
 
   </mat-toolbar-row>
 </mat-toolbar>
