--- a/RoomBooker/src/app/navbar/navbar.component.css
+++ b/RoomBooker/src/app/navbar/navbar.component.css
@@ -1,9 +1,18 @@
+
+
 .example-icon {
   padding: 0 14px;
 }
 
 .example-spacer {
   flex: 1 1 auto;
+}
+
+img{
+  outline : none;
+}
+img:hover{
+  cursor: pointer;
 }
 
 button{
@@ -31,4 +40,15 @@ button:hover{
   color: #fff;
   font-size: 14px;
   cursor: pointer;
+}
+.topbar{
+  background-color: #3f51b5;
+}
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100% !important;
 }
