--- a/RoomBooker/src/app/navbar/navbar.component.html
+++ b/RoomBooker/src/app/navbar/navbar.component.html
@@ -1,10 +1,12 @@
-<mat-toolbar color="primary">
+<div class="topbar"><mat-toolbar color="primary" style="    position: sticky;
+  position: -webkit-sticky;">
   <mat-toolbar-row>
 
-    <img routerLink="" routerLinkActive="active" src="https://pbs.twimg.com/profile_images/588342133125468160/0esgVCxq_400x400.jpg" alt="" height="48 px">
+    <img routerLink="" routerLinkActive="active" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.15752-9/44484222_1941680859251952_905240387143073792_n.png?_nc_cat=109&_nc_ht=scontent-arn2-1.xx&oh=81744f8a6675272ce532ec5f3aa00a7d&oe=5C4DDE4C" alt="" height="48 px">
     <span class="example-spacer"></span>
     <button mat-button routerLink="login" routerLinkActive="active" >Login</button>
 
 
   </mat-toolbar-row>
 </mat-toolbar>
+</div>
