--- a/RoomBooker/src/app/homepage/homepage.component.html
+++ b/RoomBooker/src/app/homepage/homepage.component.html
@@ -2,3 +2,13 @@
   <h1>Welcome to KEA's room booking system</h1>
 
 </div>
+
+<ul class="campuses">
+  <li *ngFor="let c of campuses; let i=index;">
+    <a routerLink="/product-details/{{p._id}}">
+      <span class="badge">{{i+1}}</span> {{p.prod_name}}
+    </a>
+    <button class="delete" title="delete product"
+      (click)="delete(p._id)">x</button>
+  </li>
+</ul>
