--- a/RoomBooker/src/app/map/map.component.html
+++ b/RoomBooker/src/app/map/map.component.html
@@ -1,14 +1,43 @@
-<div class="center" >
-  <svg class="scaling-svg"
-       viewBox="0 0 600 500"
-       version="1.1"
-       baseProfile="full"
-       xmlns="http://www.w3.org/2000/svg">
-    <rect x="50" y="0" width="150" height="100" fill="white" stroke="blue"  stroke-width="3" onclick="alert('room1!')"/>
-    <rect x="200" y="0" width="150" height="100" fill="white" stroke="blue"  stroke-width="3" onclick="alert('room2!')"/>
-    <rect x="50" y="100" width="150" height="100" fill="white" stroke="blue"  stroke-width="3" onclick="alert('room4!')"/>
-    <rect x="350" y="0" width="150" height="100" fill="white" stroke="blue"  stroke-width="3" onclick="alert('room3')"/>
-
-
-  </svg>
+<div>
+<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 593.34 196.25">
+   <defs>
+      <style>.cls-1{fill:#e6e6e6;stroke-linejoin:round;stroke-width:0.75px;}.cls-1,.cls-2,.cls-3,.cls-4,.cls-5{stroke:#000;}.cls-2{fill:#fff;}.cls-2,.cls-3,.cls-4,.cls-5{stroke-miterlimit:10;}.cls-3,.cls-4,.cls-5{fill:none;}.cls-4{stroke-dasharray:14.26 14.26;}.cls-5{stroke-dasharray:13.56 13.56;}.cls-6{font-size:12.18px;font-family:MyriadPro-Regular, Myriad Pro;}</style>
+   </defs>
+   <title>lygten37</title>
+   <rect class="cls-1" x="0.38" y="0.38" width="592.59" height="195.5" onclick="alert('3rd floor')"/>
+   <rect class="cls-2" x="4.43" y="73.43" width="85.91" height="118.38" onclick="alert('room 12!')"/>
+   <rect class="cls-2" x="90.35" y="73.43" width="123.12" height="118.38" onclick="alert('room 11!')"/>
+   <rect class="cls-2" x="158.67" y="4.43" width="41.94" height="47.35" onclick="alert('room 6!')"/>
+   <rect class="cls-2" x="200.61" y="4.43" width="27.06" height="47.35" onclick="alert('room 5!')"/>
+   <polygon class="cls-2" points="227.67 4.43 337.26 4.43 337.26 103.88 287.2 103.88 287.2 113.35 252.7 113.35 252.7 80.88 227.67 58.55 227.67 4.43" onclick="alert('room 4!')"/>
+   <polygon class="cls-2" points="460.38 105.23 505.7 105.23 505.7 113.35 519.9 113.35 519.9 84.93 528.7 84.93 528.7 4.43 446.85 4.43 446.85 105.23 460.38 105.23" onclick="alert('room 1!')"/>
+   <rect class="cls-2" x="337.26" y="4.43" width="56.15" height="100.79" onclick="alert('room 3!')"/>
+   <rect class="cls-2" x="393.4" y="4.43" width="53.44" height="100.79" onclick="alert('room 2!')"/>
+   <rect class="cls-2" x="310.2" y="143.79" width="39.91" height="48.03" onclick="alert('room 10!')"/>
+   <rect class="cls-2" x="350.11" y="143.79" width="70.01" height="48.03" onclick="alert('room 9!')"/>
+   <rect class="cls-2" x="420.46" y="143.79" width="82.53" height="48.03" onclick="alert('room 8!')"/>
+   <rect class="cls-2" x="502.99" y="143.79" width="80.5" height="48.03" onclick="alert('room 7!')"/>
+   <polyline class="cls-3" points="583.49 78.26 583.49 84.26 577.49 84.26"/>
+   <line class="cls-4" x1="563.23" y1="84.26" x2="541.83" y2="84.26"/>
+   <polyline class="cls-3" points="534.7 84.26 528.7 84.26 528.7 78.26"/>
+   <line class="cls-5" x1="528.7" y1="64.69" x2="528.7" y2="17.22"/>
+   <polyline class="cls-3" points="528.7 10.43 528.7 4.43 534.7 4.43"/>
+   <line class="cls-4" x1="548.96" y1="4.43" x2="570.36" y2="4.43"/>
+   <polyline class="cls-3" points="577.49 4.43 583.49 4.43 583.49 10.43"/>
+   <line class="cls-5" x1="583.49" y1="24" x2="583.49" y2="71.48"/>
+   <text x="-638.13" y="-472.13"/>
+   <text class="cls-6" transform="translate(485.82 57.06)">1</text>
+   <text class="cls-6" transform="translate(418.18 57.06)">2</text>
+   <text class="cls-6" transform="translate(355.94 57.06)">3</text>
+   <text class="cls-6" transform="translate(279.5 57.06)">4</text>
+   <text class="cls-6" transform="translate(211.85 30)">5</text>
+   <text class="cls-6" transform="translate(176.68 30)">6</text>
+   <text class="cls-6" transform="translate(539.94 170.03)">7</text>
+   <text class="cls-6" transform="translate(458.09 170.03)">8</text>
+   <text class="cls-6" transform="translate(382.32 170.03)">9</text>
+   <text class="cls-6" transform="translate(323.73 170.03)">10</text>
+   <text class="cls-6" transform="translate(145.82 140.94)">11</text>
+   <text class="cls-6" transform="translate(40.96 140.94)">12</text>
+   <text class="cls-6" transform="translate(552.89 53.68)">T</text>
+</svg>
 </div>
