--- a/RoomBooker/src/app/map/map.component.html
+++ b/RoomBooker/src/app/map/map.component.html
@@ -1,43 +1,115 @@
-<div>
-<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 593.34 196.25">
-   <defs>
-      <style>.cls-1{fill:#e6e6e6;stroke-linejoin:round;stroke-width:0.75px;}.cls-1,.cls-2,.cls-3,.cls-4,.cls-5{stroke:#000;}.cls-2{fill:#fff;}.cls-2,.cls-3,.cls-4,.cls-5{stroke-miterlimit:10;}.cls-3,.cls-4,.cls-5{fill:none;}.cls-4{stroke-dasharray:14.26 14.26;}.cls-5{stroke-dasharray:13.56 13.56;}.cls-6{font-size:12.18px;font-family:MyriadPro-Regular, Myriad Pro;}</style>
-   </defs>
-   <title>lygten37</title>
-   <rect class="cls-1" x="0.38" y="0.38" width="592.59" height="195.5" onclick="alert('3rd floor')"/>
-   <rect class="cls-2" x="4.43" y="73.43" width="85.91" height="118.38" onclick="alert('room 12!')"/>
-   <rect class="cls-2" x="90.35" y="73.43" width="123.12" height="118.38" onclick="alert('room 11!')"/>
-   <rect class="cls-2" x="158.67" y="4.43" width="41.94" height="47.35" onclick="alert('room 6!')"/>
-   <rect class="cls-2" x="200.61" y="4.43" width="27.06" height="47.35" onclick="alert('room 5!')"/>
-   <polygon class="cls-2" points="227.67 4.43 337.26 4.43 337.26 103.88 287.2 103.88 287.2 113.35 252.7 113.35 252.7 80.88 227.67 58.55 227.67 4.43" onclick="alert('room 4!')"/>
-   <polygon class="cls-2" points="460.38 105.23 505.7 105.23 505.7 113.35 519.9 113.35 519.9 84.93 528.7 84.93 528.7 4.43 446.85 4.43 446.85 105.23 460.38 105.23" onclick="alert('room 1!')"/>
-   <rect class="cls-2" x="337.26" y="4.43" width="56.15" height="100.79" onclick="alert('room 3!')"/>
-   <rect class="cls-2" x="393.4" y="4.43" width="53.44" height="100.79" onclick="alert('room 2!')"/>
-   <rect class="cls-2" x="310.2" y="143.79" width="39.91" height="48.03" onclick="alert('room 10!')"/>
-   <rect class="cls-2" x="350.11" y="143.79" width="70.01" height="48.03" onclick="alert('room 9!')"/>
-   <rect class="cls-2" x="420.46" y="143.79" width="82.53" height="48.03" onclick="alert('room 8!')"/>
-   <rect class="cls-2" x="502.99" y="143.79" width="80.5" height="48.03" onclick="alert('room 7!')"/>
-   <polyline class="cls-3" points="583.49 78.26 583.49 84.26 577.49 84.26"/>
-   <line class="cls-4" x1="563.23" y1="84.26" x2="541.83" y2="84.26"/>
-   <polyline class="cls-3" points="534.7 84.26 528.7 84.26 528.7 78.26"/>
-   <line class="cls-5" x1="528.7" y1="64.69" x2="528.7" y2="17.22"/>
-   <polyline class="cls-3" points="528.7 10.43 528.7 4.43 534.7 4.43"/>
-   <line class="cls-4" x1="548.96" y1="4.43" x2="570.36" y2="4.43"/>
-   <polyline class="cls-3" points="577.49 4.43 583.49 4.43 583.49 10.43"/>
-   <line class="cls-5" x1="583.49" y1="24" x2="583.49" y2="71.48"/>
-   <text x="-638.13" y="-472.13"/>
-   <text class="cls-6" transform="translate(485.82 57.06)">1</text>
-   <text class="cls-6" transform="translate(418.18 57.06)">2</text>
-   <text class="cls-6" transform="translate(355.94 57.06)">3</text>
-   <text class="cls-6" transform="translate(279.5 57.06)">4</text>
-   <text class="cls-6" transform="translate(211.85 30)">5</text>
-   <text class="cls-6" transform="translate(176.68 30)">6</text>
-   <text class="cls-6" transform="translate(539.94 170.03)">7</text>
-   <text class="cls-6" transform="translate(458.09 170.03)">8</text>
-   <text class="cls-6" transform="translate(382.32 170.03)">9</text>
-   <text class="cls-6" transform="translate(323.73 170.03)">10</text>
-   <text class="cls-6" transform="translate(145.82 140.94)">11</text>
-   <text class="cls-6" transform="translate(40.96 140.94)">12</text>
-   <text class="cls-6" transform="translate(552.89 53.68)">T</text>
-</svg>
+<div class="svgcontainer" >
+  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75">
+    <defs>
+       <style>
+        .cls-1,.cls-8{fill:#e6e6e6;stroke-linejoin:round;stroke-width:0.75px;}
+        .cls-2{fill:#e6e6e6;}
+        .cls-1,.cls-2,.cls-3,.cls-4,.cls-5,.cls-8{stroke:#000;}
+        .cls-2,.cls-3,.cls-4,.cls-5{stroke-miterlimit:10;}
+        .cls-3,.cls-4,.cls-5{fill:none;}
+        .cls-4{stroke-dasharray:14.26 14.26;}
+        .cls-5{stroke-dasharray:13.56 13.56;}
+        .cls-6{font-size:12.18px; font-family:MyriadPro-Regular, Myriad Pro;}
+    </style>
+  </defs>
+     <title>sxxs</title>
+     <rect id='0' class="cls-1" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
+     <rect id='12' id='12' class="cls-2" x="84.49" y="79.43" width="85.91" height="118.38" onclick="alert('room 10!')"/>
+     <rect id='11' class="cls-3" x="170.4" y="79.43" width="123.12" height="118.38"/>
+     <rect id='6' class="cls-3" x="238.72" y="10.43" width="41.94" height="47.35"/>
+     <rect id='5' class="cls-3" x="280.66" y="10.43" width="27.06" height="47.35"/>
+     <polygon id='4' class="cls-3" points="307.72 10.43 417.31 10.43 417.31 109.88 367.25 109.88 367.25 119.35 332.75 119.35 332.75 86.88 307.72 64.55 307.72 10.43"/>
+     <polygon id='1' class="cls-3" points="540.43 111.23 585.75 111.23 585.75 119.35 599.96 119.35 599.96 90.93 608.75 90.93 608.75 10.43 526.9 10.43 526.9 111.23 540.43 111.23"/>
+     <rect id='3' class="cls-3" x="417.31" y="10.43" width="56.15" height="100.79"/>
+     <rect id='2' class="cls-3" x="473.46" y="10.43" width="53.44" height="100.79"/>
+     <rect id='10' class="cls-3" x="390.25" y="149.79" width="39.91" height="48.03"/>
+     <rect id='9' class="cls-3" x="430.16" y="149.79" width="70.01" height="48.03"/>
+     <rect id='8' class="cls-3" x="500.52" y="149.79" width="82.53" height="48.03"/>
+     <rect id='7' class="cls-3" x="583.05" y="149.79" width="80.5" height="48.03"/>
+     <polyline class="cls-4" points="663.55 84.26 663.55 90.26 657.55 90.26"/>
+     <line class="cls-5" x1="643.28" y1="90.26" x2="621.88" y2="90.26"/>
+     <polyline class="cls-4" points="614.75 90.26 608.75 90.26 608.75 84.26"/>
+     <line class="cls-6" x1="608.75" y1="70.69" x2="608.75" y2="23.22"/>
+     <polyline class="cls-4" points="608.75 16.43 608.75 10.43 614.75 10.43"/>
+     <line class="cls-5" x1="629.02" y1="10.43" x2="650.41" y2="10.43"/>
+     <polyline class="cls-4" points="657.55 10.43 663.55 10.43 663.55 16.43"/>
+     <line class="cls-6" x1="663.55" y1="30" x2="663.55" y2="77.47"/>
+     <text x="-558.07" y="-466.12"/>
+     <text class="cls-7" transform="translate(565.88 63.06)">1</text>
+     <text class="cls-7" transform="translate(498.23 63.06)">2</text>
+     <text class="cls-7" transform="translate(435.99 63.06)">3</text>
+     <text class="cls-7" transform="translate(359.55 63.06)">4</text>
+     <text class="cls-7" transform="translate(291.91 36)">5</text>
+     <text class="cls-7" transform="translate(256.73 36)">6</text>
+     <text class="cls-7" transform="translate(619.99 176.03)">7</text>
+     <text class="cls-7" transform="translate(538.14 176.03)">8</text>
+     <text class="cls-7" transform="translate(462.38 176.03)">9</text>
+     <text class="cls-7" transform="translate(403.78 176.03)">10</text>
+     <text class="cls-7" transform="translate(225.87 146.94)">11</text>
+     <text class="cls-7" transform="translate(121.02 146.94)">12</text>
+     <text class="cls-7" transform="translate(632.94 59.68)">T</text>
+     <path class="cls-8" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
+     <path class="cls-8" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
+  </svg>
+  <svg id="Layer_2" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752.17 206.75" display='none'>
+     <defs>
+        <style>
+          .cls-21{fill:#e6e6e6;opacity:0.64;}
+          .cls-21,.cls-210,.cls-23,.cls-24,.cls-25,.cls-26,.cls-27,.cls-28,.cls-29{stroke:#000;}
+          .cls-21,.cls-23{stroke-linejoin:round;stroke-width:0.75px;}
+          .cls-22{fill:#e6e7e8;stroke:#231f20;stroke-linecap:round;}
+          .cls-210,.cls-22,.cls-24,.cls-25,.cls-26,.cls-27,.cls-28,.cls-29{stroke-miterlimit:10;}
+          .cls-23,.cls-24{fill:#e6e6e6;}
+          .cls-210,.cls-25,.cls-26,.cls-27,.cls-28,.cls-29{fill:none;}
+          .cls-26{stroke-dasharray:11.67 11.67;}
+          .cls-27{stroke-dasharray:13.8 13.8;}
+          .cls-28{stroke-dasharray:10 10;}
+          .cls-29{stroke-dasharray:7 7;}
+          .cls-210{stroke-dasharray:12 12;}
+          .cls-211{font-size:12.18px;font-family:MyriadPro-Regular, Myriad Pro;}
+        </style>
+     </defs>
+     <title>layer2</title>
+     <rect id='0' class="cls-21" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
+     <rect id='21' class="cls-23" x="543.43" y="114.38" width="124" height="83" onclick="alert('room 10!')"/>
+     <rect id='22' class="cls-23" x="290.43" y="102.38" width="108" height="95" onclick="alert('room 10!')"/>
+     <rect id='23' class="cls-23" x="86.43" y="79.38" width="94" height="118" onclick="alert('room 10!')"/>
+     <rect id='24' class="cls-23" x="86.43" y="8.38" width="94" height="48" onclick="alert('room 10!')"/>
+     <rect id='25' class="cls-23" x="180.43" y="8.38" width="28" height="48" onclick="alert('room 10!')"/>
+     <rect id='26' class="cls-23" x="208.43" y="8.38" width="55" height="48" onclick="alert('room 10!')"/>
+     <rect id='27' class="cls-23" x="420.43" y="8.38" width="30" height="48" onclick="alert('room 10!')"/>
+     <rect id='28' class="cls-23" x="450.43" y="8.38" width="54" height="48" onclick="alert('room 10!')"/>
+     <rect id='29' class="cls-23" x="504.43" y="8.38" width="68" height="48" onclick="alert('room 10!')"/>
+     <rect id='30' class="cls-23" x="557.43" y="56.38" width="48" height="33" onclick="alert('room 10!')"/>
+     <rect id='31' class="cls-23" x="572.43" y="8.38" width="48" height="48" onclick="alert('room 10!')"/>
+     <path class="cls-24" d="M724.5,428.5" transform="translate(-558.07 -466.12)"/>
+     <polygon id='32' class="cls-24" points="398.43 197.38 543.43 197.38 543.43 114.38 510.43 79.38 420.43 79.38 398.43 102.38 398.43 197.38"/>
+     <polygon id='33' class="cls-24" points="180.43 197.38 290.43 197.38 290.43 102.38 263.43 79.38 180.43 79.38 180.43 197.38"/>
+     <polyline class="cls-25" points="620.43 14.38 620.43 8.38 626.43 8.38"/>
+     <line class="cls-26" x1="638.09" y1="8.38" x2="655.59" y2="8.38"/>
+     <polyline class="cls-25" points="661.43 8.38 667.43 8.38 667.43 14.38"/>
+     <line class="cls-27" x1="667.43" y1="28.17" x2="667.43" y2="76.47"/>
+     <polyline class="cls-25" points="667.43 83.38 667.43 89.38 661.43 89.38"/>
+     <line class="cls-28" x1="651.43" y1="89.38" x2="616.43" y2="89.38"/>
+     <polyline class="cls-25" points="611.43 89.38 605.43 89.38 605.43 83.38"/>
+     <line class="cls-29" x1="605.43" y1="76.38" x2="605.43" y2="65.88"/>
+     <polyline class="cls-25" points="605.43 62.38 605.43 56.38 611.43 56.38"/>
+     <polyline class="cls-25" points="614.43 56.38 620.43 56.38 620.43 50.38"/>
+     <line class="cls-210" x1="620.43" y1="38.38" x2="620.43" y2="20.38"/>
+     <text class="cls-211" transform="translate(127.43 34.06)">20</text>
+     <text class="cls-211" transform="translate(229.43 34.06)">18</text>
+     <text class="cls-211" transform="translate(188.43 34.06)">19</text>
+     <text class="cls-211" transform="translate(471.43 34.06)">16</text>
+     <text class="cls-211" transform="translate(429.43 36.06)">17</text>
+     <text class="cls-211" transform="translate(599.43 158.06)">21</text>
+     <text class="cls-211" transform="translate(575.43 75.06)">14</text>
+     <text class="cls-211" transform="translate(590.43 34.06)">13</text>
+     <text class="cls-211" transform="translate(532.43 34.06)">15</text>
+     <text class="cls-211" transform="translate(130.43 151.06)">24</text>
+     <text class="cls-211" transform="translate(227.43 152.06)">23</text>
+     <text class="cls-211" transform="translate(338.43 152.06)">22</text>
+     <text class="cls-211" transform="translate(464.43 152.06)">21</text>
+     <path id='0' class="cls-22" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
+     <path id='0' class="cls-22" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
+  </svg>
 </div>
