--- a/RoomBooker/src/app/homepage/homepage.component.html
+++ b/RoomBooker/src/app/homepage/homepage.component.html
@@ -12,3 +12,43 @@
       (click)="delete(p._id)">x</button>
   </li>
 </ul>
+<div class="rowContainer">
+<div class='cardContainer'>
+<mat-card class="example-card">
+  <img mat-card-image src="https://kea.dk/slir/w720/images/DA/Om-KEA/KEA_Okt_17_001_Hi-Res.jpg" alt="Photo of a Shiba Inu">
+  <mat-card-header>
+    <mat-card-title>KEA GULDBERGSGADE</mat-card-title>
+    <mat-card-subtitle>Guldbergsgade 29N, DK-2200 Copenhagen N</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-actions>
+    <button mat-button>Book</button>
+  </mat-card-actions>
+</mat-card>
+</div>
+
+<div class='cardContainer'>
+<mat-card class="example-card">
+  <img mat-card-image src="https://kea.dk/slir/w720/images/DA/Om-KEA/KEA_Okt_17_229_Hi-Res_edit.jpg" alt="Photo of a Shiba Inu">
+  <mat-card-header>
+    <mat-card-title>KEA LYGTEN 16</mat-card-title>
+    <mat-card-subtitle>Lygten 16, DK-2400 Copenhagen NV</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-actions>
+    <button mat-button>Book</button>
+  </mat-card-actions>
+</mat-card>
+</div>
+
+<div class='cardContainer'>
+<mat-card class="example-card">
+  <img mat-card-image src="https://kea.dk/slir/w720/images/DA/Om-KEA/KEA_Okt_17_188_Hi-Res.jpg" alt="Photo of a Shiba Inu">
+  <mat-card-header>
+    <mat-card-title>KEA LYGTEN 37</mat-card-title>
+    <mat-card-subtitle>Lygten 37, DK-2400 Copenhagen NV</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-actions>
+    <button mat-button>Book</button>
+  </mat-card-actions>
+</mat-card>
+</div>
+</div>
