fixed some stuff

--- a/RoomBooker/src/app/map/map.component.html
+++ b/RoomBooker/src/app/map/map.component.html
@@ -13,19 +13,19 @@
     </style>
   </defs>
      <title>sxxs</title>
-     <rect id='0' class="cls-1" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
-     <rect id='12' id='12' class="cls-2" x="84.49" y="79.43" width="85.91" height="118.38" onclick="alert('room 10!')"/>
-     <rect id='11' class="cls-3" x="170.4" y="79.43" width="123.12" height="118.38"/>
-     <rect id='6' class="cls-3" x="238.72" y="10.43" width="41.94" height="47.35"/>
-     <rect id='5' class="cls-3" x="280.66" y="10.43" width="27.06" height="47.35"/>
-     <polygon id='4' class="cls-3" points="307.72 10.43 417.31 10.43 417.31 109.88 367.25 109.88 367.25 119.35 332.75 119.35 332.75 86.88 307.72 64.55 307.72 10.43"/>
-     <polygon id='1' class="cls-3" points="540.43 111.23 585.75 111.23 585.75 119.35 599.96 119.35 599.96 90.93 608.75 90.93 608.75 10.43 526.9 10.43 526.9 111.23 540.43 111.23"/>
-     <rect id='3' class="cls-3" x="417.31" y="10.43" width="56.15" height="100.79"/>
-     <rect id='2' class="cls-3" x="473.46" y="10.43" width="53.44" height="100.79"/>
-     <rect id='10' class="cls-3" x="390.25" y="149.79" width="39.91" height="48.03"/>
-     <rect id='9' class="cls-3" x="430.16" y="149.79" width="70.01" height="48.03"/>
-     <rect id='8' class="cls-3" x="500.52" y="149.79" width="82.53" height="48.03"/>
-     <rect id='7' class="cls-3" x="583.05" y="149.79" width="80.5" height="48.03"/>
+     <rect id='room0' class="cls-1" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
+     <rect id='room12' id='room12' class="cls-2" x="84.49" y="79.43" width="85.91" height="118.38" onclick="alert('room 10!')"/>
+     <rect id='room11' class="cls-3" x="170.4" y="79.43" width="123.12" height="118.38"/>
+     <rect id='room6' class="cls-3" x="238.72" y="10.43" width="41.94" height="47.35"/>
+     <rect id='room5' class="cls-3" x="280.66" y="10.43" width="27.06" height="47.35"/>
+     <polygon id='room4' class="cls-3" points="307.72 10.43 417.31 10.43 417.31 109.88 367.25 109.88 367.25 119.35 332.75 119.35 332.75 86.88 307.72 64.55 307.72 10.43"/>
+     <polygon id='room1' class="cls-3" points="540.43 111.23 585.75 111.23 585.75 119.35 599.96 119.35 599.96 90.93 608.75 90.93 608.75 10.43 526.9 10.43 526.9 111.23 540.43 111.23"/>
+     <rect id='room3' class="cls-3" x="417.31" y="10.43" width="56.15" height="100.79"/>
+     <rect id='room2' class="cls-3" x="473.46" y="10.43" width="53.44" height="100.79"/>
+     <rect id='room10' class="cls-3" x="390.25" y="149.79" width="39.91" height="48.03"/>
+     <rect id='room9' class="cls-3" x="430.16" y="149.79" width="70.01" height="48.03"/>
+     <rect id='room8' class="cls-3" x="500.52" y="149.79" width="82.53" height="48.03"/>
+     <rect id='room7' class="cls-3" x="583.05" y="149.79" width="80.5" height="48.03"/>
      <polyline class="cls-4" points="663.55 84.26 663.55 90.26 657.55 90.26"/>
      <line class="cls-5" x1="643.28" y1="90.26" x2="621.88" y2="90.26"/>
      <polyline class="cls-4" points="614.75 90.26 608.75 90.26 608.75 84.26"/>
@@ -70,21 +70,21 @@
         </style>
      </defs>
      <title>layer2</title>
-     <rect id='0' class="cls-21" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
-     <rect id='21' class="cls-23" x="543.43" y="114.38" width="124" height="83" onclick="alert('room 10!')"/>
-     <rect id='22' class="cls-23" x="290.43" y="102.38" width="108" height="95" onclick="alert('room 10!')"/>
-     <rect id='23' class="cls-23" x="86.43" y="79.38" width="94" height="118" onclick="alert('room 10!')"/>
-     <rect id='24' class="cls-23" x="86.43" y="8.38" width="94" height="48" onclick="alert('room 10!')"/>
-     <rect id='25' class="cls-23" x="180.43" y="8.38" width="28" height="48" onclick="alert('room 10!')"/>
-     <rect id='26' class="cls-23" x="208.43" y="8.38" width="55" height="48" onclick="alert('room 10!')"/>
-     <rect id='27' class="cls-23" x="420.43" y="8.38" width="30" height="48" onclick="alert('room 10!')"/>
-     <rect id='28' class="cls-23" x="450.43" y="8.38" width="54" height="48" onclick="alert('room 10!')"/>
-     <rect id='29' class="cls-23" x="504.43" y="8.38" width="68" height="48" onclick="alert('room 10!')"/>
-     <rect id='30' class="cls-23" x="557.43" y="56.38" width="48" height="33" onclick="alert('room 10!')"/>
-     <rect id='31' class="cls-23" x="572.43" y="8.38" width="48" height="48" onclick="alert('room 10!')"/>
+     <rect id='room0' class="cls-21" x="75.43" y="0.38" width="602" height="206" rx="5.11"/>
+     <rect id='room21' class="cls-23" x="543.43" y="114.38" width="124" height="83" onclick="alert('room 10!')"/>
+     <rect id='room22' class="cls-23" x="290.43" y="102.38" width="108" height="95" onclick="alert('room 10!')"/>
+     <rect id='room23' class="cls-23" x="86.43" y="79.38" width="94" height="118" onclick="alert('room 10!')"/>
+     <rect id='room24' class="cls-23" x="86.43" y="8.38" width="94" height="48" onclick="alert('room 10!')"/>
+     <rect id='room25' class="cls-23" x="180.43" y="8.38" width="28" height="48" onclick="alert('room 10!')"/>
+     <rect id='room26' class="cls-23" x="208.43" y="8.38" width="55" height="48" onclick="alert('room 10!')"/>
+     <rect id='room27' class="cls-23" x="420.43" y="8.38" width="30" height="48" onclick="alert('room 10!')"/>
+     <rect id='room28' class="cls-23" x="450.43" y="8.38" width="54" height="48" onclick="alert('room 10!')"/>
+     <rect id='room29' class="cls-23" x="504.43" y="8.38" width="68" height="48" onclick="alert('room 10!')"/>
+     <rect id='room30' class="cls-23" x="557.43" y="56.38" width="48" height="33" onclick="alert('room 10!')"/>
+     <rect id='room31' class="cls-23" x="572.43" y="8.38" width="48" height="48" onclick="alert('room 10!')"/>
      <path class="cls-24" d="M724.5,428.5" transform="translate(-558.07 -466.12)"/>
-     <polygon id='32' class="cls-24" points="398.43 197.38 543.43 197.38 543.43 114.38 510.43 79.38 420.43 79.38 398.43 102.38 398.43 197.38"/>
-     <polygon id='33' class="cls-24" points="180.43 197.38 290.43 197.38 290.43 102.38 263.43 79.38 180.43 79.38 180.43 197.38"/>
+     <polygon id='room32' class="cls-24" points="398.43 197.38 543.43 197.38 543.43 114.38 510.43 79.38 420.43 79.38 398.43 102.38 398.43 197.38"/>
+     <polygon id='room33' class="cls-24" points="180.43 197.38 290.43 197.38 290.43 102.38 263.43 79.38 180.43 79.38 180.43 197.38"/>
      <polyline class="cls-25" points="620.43 14.38 620.43 8.38 626.43 8.38"/>
      <line class="cls-26" x1="638.09" y1="8.38" x2="655.59" y2="8.38"/>
      <polyline class="cls-25" points="661.43 8.38 667.43 8.38 667.43 14.38"/>
@@ -109,7 +109,7 @@
      <text class="cls-211" transform="translate(227.43 152.06)">23</text>
      <text class="cls-211" transform="translate(338.43 152.06)">22</text>
      <text class="cls-211" transform="translate(464.43 152.06)">21</text>
-     <path id='0' class="cls-22" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
-     <path id='0' class="cls-22" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
+     <path id='room0' class="cls-22" d="M560.2,576.83l32.92,24.31a4,4,0,0,0,6.38-3.21V549.3a4,4,0,0,0-6.38-3.22L560.2,570.39A4,4,0,0,0,560.2,576.83Z" transform="translate(-558.07 -466.12)" onclick="right()"/>
+     <path id='room0' class="cls-22" d="M1307.71,573.59l-30.24-22.33a5,5,0,0,0-8,4v44.66a5,5,0,0,0,8,4l30.24-22.34A5,5,0,0,0,1307.71,573.59Z" transform="translate(-558.07 -466.12)" onclick="left()"/>
   </svg>
 </div>
