--- a/RoomBooker/src/app/homepage/homepage.component.css
+++ b/RoomBooker/src/app/homepage/homepage.component.css
@@ -13,6 +13,22 @@
   padding: 10px;
   flex-flow: row wrap;
 }
+.titleContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+h1{
+  padding: 0px;
+}
+
 .mat-card-content, .mat-card-header .mat-card-title {
   font-size: 20px;
+}
+.example-full-width{
+  padding-left: 10px;
+  padding-right: 10px;
+
 }
