--- a/RoomBooker/src/app/navbar/navbar.component.html
+++ b/RoomBooker/src/app/navbar/navbar.component.html
@@ -1,8 +1,7 @@
-<div class="topbar"><mat-toolbar color="primary" style="    position: sticky;
-  position: -webkit-sticky;">
+<div class="topbar"><mat-toolbar color="primary" >
   <mat-toolbar-row>
 
-    <img routerLink="" routerLinkActive="active" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.15752-9/44484222_1941680859251952_905240387143073792_n.png?_nc_cat=109&_nc_ht=scontent-arn2-1.xx&oh=81744f8a6675272ce532ec5f3aa00a7d&oe=5C4DDE4C" alt="" height="48 px">
+    <img routerLink="" routerLinkActive="active" src="https://scontent.fcph2-1.fna.fbcdn.net/v/t1.15752-9/s2048x2048/46101242_942055092659247_3774244112413229056_n.png?_nc_cat=111&_nc_ht=scontent.fcph2-1.fna&oh=bc056bb18e2bdea6fe706123abbc52e1&oe=5C72C6CA" alt="" height="48 px">
     <span class="example-spacer"></span>
     <button mat-button routerLink="login" routerLinkActive="active" >Login</button>
 
