--- a/RoomBooker/src/app/homepage/homepage.component.html
+++ b/RoomBooker/src/app/homepage/homepage.component.html
@@ -4,15 +4,15 @@
 </div>
 <div class="titleContainer">
   <mat-form-field class="example-full-width">
-    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+    <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
   <mat-form-field class="example-full-width">
-    <input matInput atp-time-picker value="" placeholder="From"/>
+    <input id="fromtime"  start="08:00" end="22:00" value="" atp-time-picker matInput placeholder="From"/>
   </mat-form-field>
   <mat-form-field class="example-full-width">
-   <input matInput atp-time-picker value="" placeholder="To"/>
+   <input id="totime" matInput (click)="getFromTime();" start="" end="22:00" atp-time-picker value="" placeholder="To"/>
   </mat-form-field>
 </div>
 
