--- a/RoomBooker/src/app/homepage/homepage.component.html
+++ b/RoomBooker/src/app/homepage/homepage.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="titleContainer">
   <mat-form-field class="example-full-width">
-    <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date">
+    <input matInput [(ngModel)]="date" [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
@@ -12,7 +12,7 @@
     <input id="fromtime"  start="08:00" end="22:00" value="" atp-time-picker matInput placeholder="From"/>
   </mat-form-field>
   <mat-form-field class="example-full-width">
-   <input id="totime" matInput (click)="getFromTime();" start="" end="22:00" atp-time-picker value="" placeholder="To"/>
+   <input id="totime" matInput  start="08:00" end="22:00" atp-time-picker value="" placeholder="To"/>
   </mat-form-field>
 </div>
 
@@ -26,7 +26,7 @@
     <mat-card-subtitle>Guldbergsgade 29N, DK-2200 Copenhagen N</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
-    <button mat-button>Book</button>
+    <button (click)="getBookingTimes();" mat-button>Book</button>
   </mat-card-actions>
 </mat-card>
 </div>
