--- a/RoomBooker/src/app/homepage/homepage.component.html
+++ b/RoomBooker/src/app/homepage/homepage.component.html
@@ -39,7 +39,7 @@
     <mat-card-subtitle>Lygten 16, DK-2400 Copenhagen NV</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
-    <button mat-button>Book</button>
+    <button (click)="logOut();" mat-button>Book</button>
   </mat-card-actions>
 </mat-card>
 </div>
