--- a/RoomBooker/src/app/homepage/homepage.component.html
+++ b/RoomBooker/src/app/homepage/homepage.component.html
@@ -26,7 +26,7 @@
     <mat-card-subtitle>Guldbergsgade 29N, DK-2200 Copenhagen N</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
-    <button (click)="getAllRooms();" mat-button>Book</button>
+    <button mat-button (click)="getBookingTimes();"  routerLink="booking" routerLinkActive="active">Book</button>
   </mat-card-actions>
 </mat-card>
 </div>
@@ -52,7 +52,7 @@
     <mat-card-subtitle>Lygten 37, DK-2400 Copenhagen NV</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
-    <button mat-button>Book</button>
+    <button (click)="getAllRooms();" mat-button>Book</button>
   </mat-card-actions>
 </mat-card>
 </div>
